--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -15,16 +15,18 @@ build:
         - artifactory.toolchain.lead.prod.liatr.io/docker-registry/liatrio/springtrader-builder:latest
         - artifactory.toolchain.lead.prod.liatr.io/docker-registry/liatrio/springtrader-runner:latest
   local: {}
-
 deploy:
   helm:
+    flags:
+      upgrade: ["--timeout", "600"]
+      install: ["--timeout", "600"]
     releases:
-      - name: springtrader 
+      - name: springtrader
         chartPath: ./charts/springtrader
         wait: true
         values:
-          image: springtrader 
-          sqlfdb: sqlfdb 
+          image: springtrader
+          sqlfdb: sqlfdb
         setValueTemplates:
           istioDomain: "{{.ISTIO_DOMAIN}}"
           productName: "{{.PRODUCT_NAME}}"
@@ -35,5 +37,5 @@ profiles:
   patches:
   - op: add
     path: /deploy/helm/releases/0/setValues
-    value: 
+    value:
       storageClassName: microk8s-hostpath
